Fix overflow of videos, need to work on pagination buttons

--- a/src/components/VideoContainer/VideoContainer.scss
+++ b/src/components/VideoContainer/VideoContainer.scss
@@ -7,6 +7,7 @@
   // position: absolute;
   z-index: -1;
   top: 0;
+  overflow: hidden;
 }
 
 .slider {
